--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "devDependencies": {
         "axios": "^0.17",
         "bootstrap": "^4.0.0",
-        "popper.js": "^1.12",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^2.0",
         "lodash": "^4.17.4",
-        "vue": "^2.5.7"
+        "popper.js": "^1.12",
+        "vue": "^2.5.7",
+        "vue-router": "^3.0.1",
+        "vue-snotify": "^3.0.4",
+        "vuex": "^3.0.1"
     }
 }
