--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=7.1.3",
+        "barryvdh/laravel-cors": "^0.11.0",
         "fideloper/proxy": "~4.0",
         "intervention/image": "^2.4",
         "laravel/framework": "5.6.*",
