--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "popper.js": "^1.12",
         "vue": "^2.5.7",
         "vue-chartjs": "^3.2.1",
+        "vue-picture-input": "^2.1.1",
         "vue-router": "^3.0.1",
         "vue-snotify": "^3.0.4",
         "vuex": "^3.0.1"
