--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "intervention/image": "^2.4",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "~1.0",
+        "spatie/laravel-cors": "^1.1",
         "tymon/jwt-auth": "dev-develop"
     },
     "require-dev": {
